# LNS-Robot

./: .gitignore  README.md  report.xml
src/bring_up/: CMakeLists.txt  drivingMotorSetup.py  package.xml  steeringMotorSetup.py
src/communication_sockets/: CMakeLists.txt  package.xml  socket2.py
src/control/lns_controller/: CMakeLists.txt  package.xml
src/control/swerve_controller/: CMakeLists.txt  package.xml
src/controllers/: CMakeLists.txt  package.xml  remap_fb_node.py  remap_sp_node.py
src/controllers/src/: remap_ce_node.cpp
src/demo/: CMakeLists.txt  demo1.py  demo2.py  demo3.py  package.xml  zeroing.py
src/driving/driving_pid/: CMakeLists.txt  package.xml
src/driving/driving_pid/launch/: driving_pid.launch
src/driving/driving_pid/scripts/: remap_commands.py  remap_feedback_node.py
src/driving/driving_pid/src/: pid.cpp
src/driving_motors/: CMakeLists.txt  motorTcpCom.py  motorTcpFeed.py  package.xml  sendTest.py  test.py
src/lns_bringup/: CMakeLists.txt  package.xml
src/lns_controller/: CMakeLists.txt
src/lns_description/: CMakeLists.txt  package.xml
src/lns_gazebo/: CMakeLists.txt  package.xml
src/lns_launch/: CMakeLists.txt  package.xml
src/lns_navigation/: CMakeLists.txt  package.xml
src/lns_teleop/: CMakeLists.txt  package.xml
src/parameters/: canDic.py  robotDic.py  socketDic.py
src/sibl_std/: CMakeLists.txt  package.xml  simple_planner_plugin.xml
src/steering_motors/: CMakeLists.txt  motorTcpCom.py  motorTcpFeed.py  package.xml
src/teleop/: CMakeLists.txt  package.xml  teleop_keyboard.py
(+162 files in other folders)
